Improved mixins to no longer use redirect